--- a/application-set-hom.yaml
+++ b/application-set-hom.yaml
@@ -6,7 +6,7 @@ spec:
   generators:
     - git:
         repoURL: https://github.com/dumunari/gitops-essentials.git
-        revision: application-set
+        revision: application-set-helm
         files:
         - path: "apps/**/config.yaml"
   template:
@@ -16,8 +16,11 @@ spec:
       project: go-apps
       source:
         repoURL: "{{repoUrl}}"
-        targetRevision: main
-        path: "k8s"
+        targetRevision: appset-helm
+        path: "helm-chart"
+        helm:
+          valueFiles:
+            - "values-hom.yaml"
       destination:
         server: https://kubernetes.default.svc
         namespace: hom
