--- a/application-set.yaml
+++ b/application-set.yaml
@@ -24,3 +24,6 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: dev
+      syncPolicy:
+        automated: {}
+      
