fix: hom appset

--- a/application-set-hom.yaml
+++ b/application-set-hom.yaml
@@ -17,7 +17,7 @@ spec:
       source:
         repoURL: "{{repoUrl}}"
         targetRevision: appset-helm
-        path: "helm-chart"
+        path: "{{application}}-helm-chart"
         helm:
           valueFiles:
             - "values-hom.yaml"
